made the width and height of html and body tags to 100vh/100vw respectively. Hopefully this will fix issues overflow in mobile browsers.

--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
 html {
   background-color: #000000;
   overflow: hidden;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 }
 
 body{
 	overflow: hidden;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 }
  
 .container {
